# serializer version: 1
# name: test_resources_served_to_the_object_rule_picker_snapshot
  list([
    'action',
    'ai_observability_clusters',
    'dashboard',
    'dataset',
    'early_access_feature',
    'endpoint',
    'evaluation',
    'experiment',
    'experiment_saved_metric',
    'external_data_source',
    'feature_flag',
    'heatmap',
    'hog_flow',
    'insight',
    'llm_prompt',
    'llm_provider_key',
    'llm_skill',
    'notebook',
    'product_tour',
    'replay_scanner',
    'session_recording',
    'session_recording_playlist',
    'survey',
    'tagger',
    'ticket',
    'warehouse_table',
    'warehouse_view',
  ])
# ---
# name: test_resources_with_object_access_controls_snapshot
  list([
    'account',
    'action',
    'ai_observability_clusters',
    'customer_analytics',
    'customer_journey',
    'dashboard',
    'dataset',
    'early_access_feature',
    'endpoint',
    'evaluation',
    'experiment',
    'experiment_saved_metric',
    'export',
    'external_data_source',
    'feature_flag',
    'heatmap',
    'hog_flow',
    'insight',
    'llm_analytics',
    'llm_prompt',
    'llm_provider_key',
    'llm_skill',
    'notebook',
    'product_tour',
    'replay_scanner',
    'session_recording',
    'session_recording_playlist',
    'sharing_configuration',
    'survey',
    'tagger',
    'ticket',
    'warehouse_objects',
    'warehouse_table',
    'warehouse_view',
  ])
# ---
